[gd_scene load_steps=6 format=3 uid="uid://cuihfddu15kv6"]

[ext_resource type="Script" uid="uid://dgtyi4qevt0lm" path="res://Script/clear.gd" id="1_tlx3i"]
[ext_resource type="Texture2D" uid="uid://e2txm861lvlc" path="res://Sprite/S_Clear.png" id="2_tlx3i"]
[ext_resource type="Texture2D" uid="uid://dnv6ep53hkx7" path="res://Sprite/S_Button1.png" id="3_xuvor"]
[ext_resource type="Script" uid="uid://cqoq8ogtcbspm" path="res://Script/button.gd" id="4_s1f57"]
[ext_resource type="Theme" uid="uid://b6yfl8n2aao2j" path="res://Theme/theme1.tres" id="5_s37jw"]

[node name="Clear" type="Node2D"]
script = ExtResource("1_tlx3i")
metadata/_edit_group_ = true

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("2_tlx3i")

[node name="TimeLabel" type="Label" parent="TextureRect"]
layout_mode = 1
offset_left = 895.00006
offset_top = 501.0
offset_right = 1151.0
offset_bottom = 565.0
scale = Vector2(1.730735, 2.192841)
theme = ExtResource("5_s37jw")
theme_override_font_sizes/font_size = 50
text = "99"
horizontal_alignment = 2
vertical_alignment = 1
text_direction = 2

[node name="ScoreLabel" type="Label" parent="TextureRect"]
layout_mode = 1
offset_left = 910.0
offset_top = 728.0
offset_right = 1145.0
offset_bottom = 792.0
scale = Vector2(1.8, 1.8)
theme = ExtResource("5_s37jw")
theme_override_font_sizes/font_size = 47
text = "10000"
horizontal_alignment = 2
vertical_alignment = 1

[node name="TileTexture" type="TextureRect" parent="TextureRect"]
layout_mode = 0
offset_left = 631.99994
offset_top = 806.0
offset_right = 2632.0
offset_bottom = 1830.0
scale = Vector2(0.33589566, 0.33589566)
texture = ExtResource("3_xuvor")

[node name="TitleButton" type="Button" parent="TextureRect/TileTexture"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 309.6201
offset_top = 288.7802
offset_right = 309.62012
offset_bottom = -85.21979
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.69125587, 0.69125587)
script = ExtResource("4_s1f57")

[node name="Label" type="Label" parent="TextureRect/TileTexture/TitleButton"]
layout_mode = 0
offset_left = -107.6706
offset_top = 25.84102
offset_right = 212.3294
offset_bottom = 89.841034
scale = Vector2(7.0921807, 7.0921807)
theme = ExtResource("5_s37jw")
text = "Next"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(960, 540)

[connection signal="pressed" from="TextureRect/TileTexture/TitleButton" to="." method="_on_title_button_pressed"]
